flarestyle.css
:root{
	--bgColor:#7a7a7a;
	--logoFilter:contrast(1)brightness(1);
	--arrowFilter:brightness(1)contrast(1);
	--postColor: white;
	--pColor: ;
	--pShadow: 1px 4px 12px #5858586b;
	--h1Color: black;
	--redHeading: red;
	--h2Color: black;
	--aColor: #484848;
	--figcaptionColor: #333333;
	--bttButtonShadow: 2px 6px 12px #8d8d8d54;
	--bttButtonBorderColor: #e6e6e6;
	--frontTileFilter: saturate(0)brightness(0);
	--frontTileFilterHover: saturate(1)brightness(1);
	--settingsXButtonFilter: saturate(0)brightness(0);
}
.lightTheme{
	--bgColor:#FCFCFC;
	--logoFilter:contrast(1)brightness(1);
	--arrowFilter:brightness(1)contrast(1);
	--postColor: white;
	--pColor: ;
	--pShadow: 1px 4px 12px #5858586b;
	--h1Color: black;
	--redHeading: red;
	--h2Color: black;
	--aColor: #484848;
	--figcaptionColor: #333333;
	--bttButtonShadow: 2px 6px 12px #8d8d8d54;
	--bttButtonBorderColor: #e6e6e6;
	--frontTileFilter: saturate(0)brightness(0);
	--frontTileFilterHover: saturate(1)brightness(1);
	--settingsXButtonFilter: saturate(0)brightness(0);
}
.darkTheme{
	--bgColor:#181818;
	--logoFilter:invert(1)hue-rotate(180deg)saturate(10);
	--arrowFilter:brightness(0)contrast(.1);
	--postColor:#252525;
	--pColor:#c3c3c3;
	--pShadow: 1px 4px 12px #000000a1;
	--h1Color: white;
	--redHeading: #ff4423;
	--h2Color: white;
	--aColor: white;
	--figcaptionColor: #818181;
	--bttButtonShadow: 1px 4px 12px #000000a1;
	--bttButtonBorderColor: #3d3d3d;
	--frontTileFilter: invert(1)hue-rotate(180deg)saturate(0)contrast(0.1)brightness(10);
	--frontTileFilterHover: invert(1)hue-rotate(180deg)saturate(10);
	--settingsXButtonFilter: saturate(0)brightness(10);
}

body {
  background-color: var(--bgColor) !important;
  overflow:overlay;
}

.body::-webkit-scrollbar {
  display: none;
}

/* Hide scrollbar for IE, Edge and Firefox */
.body {
  -ms-overflow-style: none;  /* IE and Edge */
  scrollbar-width: none;  /* Firefox */
}

/* custom scrollbar */
::-webkit-scrollbar {
  width: 20px;
}

::-webkit-scrollbar-track {
  background-color: black;
}

::-webkit-scrollbar-thumb {
  background-color: #898989;
  border-radius: 20px;
  border: 6px solid transparent;
  background-clip: content-box;
}

::-webkit-scrollbar-thumb:hover {
  background-color: #ff6259;
}


#globalBackground{
  position: fixed;
  bottom: 0;
  right: 0;
  left: 0;
  top: -25%;
  z-index: -100;
}

#flarebg{
  min-width: 100%;
  min-height: 100%;
  max-width: 250%;
  max-height: 400%;
}

p{
  font-family: "Franklin Gothic Medium";
  font-size: 20px;
  color: var(--pColor);
}

.date {
  color:gray;
  text-align:center;
  font-size:18px;
  margin:-10px;
}

h1 {
  font-family: "Franklin Gothic Medium";
  font-size: 40px;
  color: var(--h1Color);
}

.redHeading{
  color: var(--redHeading);
}

h2 {
  font-family: "Franklin Gothic Medium";
  font-size: 30px;
  color: var(--h2Color);
}
h3{
  font-family: "Franklin Gothic Medium";
  font-size: 22px;
  color: black;
}

.blogTitle {
  text-decoration:none;
}

.post h2 {
  text-align: center;
}

.centertext {
  text-align: center;
}

em{
  font-size: 20px;
}

figcaption{
  font-family: "Franklin Gothic Medium";
  font-style: italic;
  color: var(--figcaptionColor);
}

a:link {
  color: var(--aColor);
  font-family: "Franklin Gothic Medium";
  font-size: 20px;
}

a:visited {
  color: var(--aColor);
  font-family: "Franklin Gothic Medium";
  font-size: 20px;
}

a:hover {
  --aColor: red;
  --pColor: red;
  font-family: "Franklin Gothic Medium";
  font-size: 20px;
}

a:active {
  color:red;
  font-family: "Franklin Gothic Medium";
  font-size: 20px;
}

.imlink{
  text-decoration: none;
}

.logo {
  display: inline-block;
  position: absolute;
  tab-index: 1;
  margin-left: 0em;
  margin-right: auto;
  margin-bottom:2em; 
  top: 3vmin;
  left: 3vmin;
  width: 39vmin;
  height: 10vmin; 
  filter: var(--logoFilter);
  /*padding: 8px;*/
}

.topbar {
  display: fixed;
  height: 13vmin;
  overflow: hidden;
  /*padding: 16px;*/
  margin: -8px 0px 2em -8px;
}

.toparrow{
  display: inline-block;
  position: absolute;
  background: url("/res/uparrow.svg") no-repeat;
  background-size: contain;
  margin-left: 0em;
  margin-right: auto;
  margin-bottom:2.5em;
  transform:rotate(90deg);
  top:8vmin;
  left:40vmin;
  width:5vmin;
  height:5vmin;
  filter: var(--arrowFilter);
}

.arttitle {
  display: inline-block;
  position: absolute;
  background: url("/res/arttitle.svg") no-repeat;
  background-size: contain;
  margin-left: 0em;
  margin-right: auto;
  margin-bottom:2em;
  top:8vmin;
  left:46vmin;
  height:5vmin;
  width:12vmin;
  filter: var(--arrowFilter);
}

.blogtitle {
  display: inline-block;
  position: absolute;
  background: url("/res/blogtitle.svg") no-repeat;
  background-size: contain;
  margin-left: 0em;
  margin-right: auto;
  margin-bottom:2em;
  top:8vmin;
  left:46vmin;
  height:5vmin;
  width:19vmin;
  filter: var(--arrowFilter);
}

.linkstitle {
  display: inline-block;
  position: absolute;
  background: url("/res/linkstitle.svg") no-repeat;
  background-size: contain;
  margin-left: 0em;
  margin-right: auto;
  margin-bottom:2em;
  top:8vmin;
  left:46vmin;
  height:5vmin;
  width:19vmin;
  filter: var(--arrowFilter);
}

.projectstitle {
  display: inline-block;
  position: absolute;
  background: url("/res/projectstitle.svg") no-repeat;
  background-size: contain;
  margin-left: 0em;
  margin-right: auto;
  margin-bottom:2em;
  top:8vmin;
  left:46vmin;
  height:5vmin;
  width:32vmin;
  filter: var(--arrowFilter);
}

.newsbar {
  display: block;
  background: black;
  bottom: 0;
  left: 0;
  right: 0;
  overflow: hidden;
  height: 30px;
  position: absolute;
  word-break: break-all;
  line-height: 30px;
    -moz-user-select: -moz-none;
    -khtml-user-select: none;
    -webkit-user-select: none;
    -o-user-select: none;
    user-select: none;
}

#scrollText {
  display: inline;
  color: white;
  margin: 0.5px;
  width: fit-content;
}
/* ... */

